--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "openai": "^6.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paystack": "^6.0.0",
     "react-router-hash-link": "^2.4.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.4",
     "zod": "^4.3.5"
   },
   "devDependencies": {
