--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
     "react": "^18.2.0",
