--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "docx": "^8.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.545.0",
+    "marked": "^5.1.1",
     "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
@@ -31,15 +35,12 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
-    "jspdf": "^2.5.1",
-    "docx": "^8.3.0",
-    "marked": "^5.1.1",
-    "html2canvas": "^1.4.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
