--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "eslint"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "lucide-react": "^0.545.0",
     "marked": "^5.1.1",
     "next": "^15.5.7",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
     "react": "^18.2.0",
